@@ -1,0 +1,9 @@
+Title: WATO folder filter: improve output of unknown folders
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i4
+Date: 1482485555
+Class: fix
+
+
